# superset-kpis

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER_QUICKSTART.md  Makefile  README.md  SETUP_INSTRUCTIONS.md  TDD_ENFORCEMENT_GUIDE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.claude/: README.md
.githooks/: pre-commit
database/: 01_schema.sql  02_indexes.sql  indexes.sql
docker/: Dockerfile  Dockerfile.spark  Dockerfile.superset  run-tests.sh  start-dev.sh
docs/: ACCUMULATORS_OPT.md  ARCHITECTURE.md  AUTO_DASHBOARDS.md  BUGS_DIARY.md  DAU_MAU.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_POLICY.md  EXPANSION_PLAN.md  IMPLEMENTATION_TASKS.md  INDEXES_DECISIONS.md  INTEGRATION_TEST_FIX_PLAN.md  ML_ACC_MANA.md  ML_PLAN.md  OPTIMIZATION_GUIDE.md  PROJECT_STRUCTURE.md  REPORT.md  RETENTIONS.md  SETUP_GUIDE.md  SWOT.md  TDD_SPEC.md  TESTING_GUIDE.md  final_checks.md  test_analysis.md  transforms_issues.md
docs/challenge/: TheChallenge.md
notebooks/: 01_churn_prediction.ipynb  02_behavioral_segmentation.ipynb  03_ml_anomaly_detection.ipynb  04_retention_forecasting.ipynb
scripts/: check-tdd.sh  generate_sample_data.py  retention_analysis.py  run_spark_job.sh  setup-tdd.sh  setup_superset.py
src/config/: constants.py  database_config.py  spark_config.py  spark_session.py  spark_tuning.py
src/config/postgres/: __init__.py  connection.py  reader.py  writer.py
src/jobs/: 01_data_processing.py  02_user_engagement.py  03_performance_metrics.py  04_session_analysis.py  __init__.py  base_job.py  run_all_jobs.sh
src/schemas/: __init__.py  columns.py  interactions_schema.py  metadata_schema.py
src/transforms/: __init__.py  engagement_transforms.py  join_transforms.py  performance_transforms.py  session_transforms.py
src/transforms/engagement/: __init__.py  active_users.py  cohort_retention.py  segmentation.py
src/transforms/join/: __init__.py  execution.py  optimization.py
src/transforms/performance/: __init__.py  anomalies.py  percentiles.py
src/transforms/session/: __init__.py  metrics.py  sessionization.py
src/utils/: data_quality.py  monitoring.py
src/utils/monitoring/: __init__.py  accumulators.py  context.py  reporting.py  tracking.py
superset/: DASHBOARD_SETUP_GUIDE.md  superset_config.py
superset/dashboards/: 01_executive_overview.json  02_user_engagement.json  03_performance_monitoring.json  04_session_analytics.json
superset/dashboards/excecutive/: metadata.yaml
superset/dashboards/excecutive/charts/: Average_Engaged_Minutes_per_User_6.yaml  Average_Interactions_per_User_7.yaml  DAU_KPI_Card_1.yaml  Daily_Active_Users_4.yaml  Device_Users_Distribution_5.yaml  MAU_KPI_Card_2.yaml  Stickiness_KPI_Card_3.yaml
superset/dashboards/excecutive/dashboards/: Executive_Overview_-_GoodNote_Analytics_1.yaml
superset/dashboards/excecutive/databases/: GoodNote_Analytics.yaml
tests/: conftest.py
tests/integration/: conftest.py  test_01_data_processing.py  test_02_user_engagement.py  test_03_performance_metrics.py  test_04_session_analysis.py  test_base_job.py  test_data_processing_job.py  test_end_to_end_pipeline.py  test_performance_metrics_job.py  test_session_analysis_job.py  test_user_engagement_job.py
tests/integration/engagement/: test_cohorts.py  test_dau_mau.py  test_engagement_integration.py
tests/integration/performance/: test_anomaly_detection.py  test_metrics_accuracy.py
tests/integration/pipeline/: test_basic_pipeline.py  test_edge_cases.py  test_monitoring.py
tests/integration/session/: test_bounce_rates.py  test_session_integration.py  test_sessionization.py
tests/unit/: test_accumulators.py  test_anomalies.py  test_cohort_retention.py  test_columns.py  test_constants.py  test_context.py  test_data_quality.py  test_engagement_transforms.py  test_join_transforms.py  test_metrics.py  test_monitoring.py  test_optimization.py  test_percentiles.py  test_performance_transforms.py  test_reader.py  test_reporting.py  test_session_transforms.py  test_spark_session.py  test_spark_tuning.py  test_writer.py
tests/unit/engagement/: test_cohort_retention.py  test_dau_mau.py  test_power_users.py  test_stickiness.py
tests/unit/helpers/: __init__.py  assertions.py  fixtures.py  schemas.py
tests/unit/join/: test_hot_key_detection.py  test_optimized_join.py  test_salting.py
tests/unit/performance/: test_anomalies.py  test_percentiles.py
tests/unit/session/: test_metrics.py
(+4 files in other folders)
